added Search Endpoint + webui Searchbar
